# carousel

./: .gitignore  LICENSE  cabal.project  carousel.cabal  spew.cabal
app/: Main.hs
src/: Main.hs
src/Data/: Carousel.hs  Spew.hs
src/Data/Carousel/: Codec.hs  Filter.hs  Gather.hs  Hashed.hs  Internal.hs  Packet.hs  Scatter.hs  Util.hs
src/Data/Spew/: Codec.hs  Decode.hs  Encode.hs  Filter.hs  Hashed.hs  Packet.hs  Util.hs
src/Galois/: Field.hs  Matrix.hs
src/Network/: Filter.hs
src/carousel/: Util.hs
src/carousel/Data/Carousel/: Codec.hs  Scatter.hs
src/fields/: GF2_8.hs
src/matrix/: Field.hsig  Matrix.hs
src/net/: Filter.hs  Hashed.hs
