cabal-version: 2.4
name: carousel
version: 0
license: MIT
license-file: LICENSE
author: Edward A. Kmett
maintainer: Edward A. Kmett <ekmett@gmail.com>
stability: experimental
copyright:
  (c) 2020 Edward A. Kmett,
  (c) 2015-2016, Nicolas Trangez,
  (c) 2015, Klaus Post,
  (c) 2015, Backblaze
build-type: Simple

common base
  build-depends:
    base,
    bytestring,
    data-default,
    network
  ghc-options: -Wall
  default-language: Haskell2010

library
  import: base
  build-depends:
    bytestring-to-vector,
    cereal,
    contravariant,
    cryptohash-sha256,
    exceptions,
    hashable,
    hw-prim,
    loop,
    mtl,
    primitive,
    template-haskell,
    transformers,
    vector,
    vector-split

  -- Data.Carousel.Gather
  exposed-modules:
    Data.Carousel
    Data.Carousel.Codec
    Data.Carousel.Scatter
    Data.Carousel.Packet
    Data.Carousel.Internal
    Galois.Field
    Galois.Matrix
    Network.Filter
  hs-source-dirs: src

executable carousel
  import: base
  main-is: app/Main.hs
  build-depends:
    iproute,
    optparse-applicative,
    carousel
