cabal-version: 2.4
name: carousel
version: 0
license: MIT
license-file: LICENSE
author: Edward A. Kmett
maintainer: Edward A. Kmett <ekmett@gmail.com>
stability: experimental
copyright:
  (c) 2020 Edward A. Kmett,
  (c) 2015-2016, Nicolas Trangez,
  (c) 2015, Klaus Post,
  (c) 2015, Backblaze
build-type: Simple

common base
  default-language: Haskell2010
  build-depends: base
  ghc-options: -Wall

library net
  import: base
  hs-source-dirs: src/net
  build-depends:
    bytestring,
    cereal,
    network,
    data-default,
    contravariant,
    cryptohash-sha256,
  exposed-modules:
    Filter
    Hashed

library fields
  import: base
  hs-source-dirs: src/fields
  build-depends:
    hashable,
    loop,
    primitive,
    template-haskell,
    vector
  exposed-modules:
    GF2_8

library matrix
  import: base
  hs-source-dirs: src/matrix
  build-depends:
    loop,
    vector,
    vector-split
  signatures: Field
  exposed-modules:
    Matrix

library
  import: base
  hs-source-dirs: src/carousel
  build-depends:
    bytestring,
    bytestring-to-vector,
    data-default,
    cereal,
    exceptions,
    hw-prim,
    loop,
    mtl,
    network,
    transformers,
    vector,
    vector-split

  exposed-modules:
    Data.Carousel
    Data.Carousel.Codec
    Data.Carousel.Scatter
    Data.Carousel.Packet

  other-modules:
    Util

  build-depends: fields, matrix, net
  mixins: fields (GF2_8 as Galois.Field)
  mixins: matrix (Matrix as Galois.Matrix) requires (Field as Galois.Field)
  mixins: net (Filter as Data.Carousel.Filter, Hashed)
  reexported-modules:
    Data.Carousel.Filter,
    Galois.Field,
    Galois.Matrix

executable carousel
  import: base
  main-is: Main.hs
  build-depends: carousel
  build-depends:
    bytestring,
    iproute,
    optparse-applicative,
    network
