cabal-version: 2.4
name: spew
version: 0
license: MIT
license-file: LICENSE
author: Edward A. Kmett
maintainer: Edward A. Kmett <ekmett@gmail.com>
stability: experimental
copyright: Copyright (C) 2020 Edward A. Kmett
build-type: Simple

common base
  build-depends: base
  ghc-options: -Wall
  default-language: Haskell2010

library
  import: base
  build-depends:
    bytestring,
    bytestring-to-vector,
    cereal,
    cryptohash-sha256,
    data-default,
    exceptions,
    hashable,
    hw-prim,
    loop,
    mtl,
    network,
    primitive,
    template-haskell,
    vector,
    vector-split
  exposed-modules:
    Data.Spew
    Data.Spew.Codec
    Data.Spew.Encode
    Data.Spew.Hashed
    Data.Spew.Packet
    Galois.Field
    Galois.Matrix
  other-modules:
    Data.Spew.Util
  hs-source-dirs: src

executable spew
  import: base
  main-is: app/Main.hs
  build-depends:
    spew
