cabal-version: 2.4
name: spew
version: 0
license: MIT
license-file: LICENSE
author: Edward A. Kmett
maintainer: Edward A. Kmett <ekmett@gmail.com>
stability: experimental
copyright: Copyright (C) 2020 Edward A. Kmett
build-type: Simple

common base
  build-depends:
    base,
    bytestring,
    data-default,
    network
  ghc-options: -Wall
  default-language: Haskell2010

library
  import: base
  build-depends:
    bytestring-to-vector,
    cereal,
    cryptohash-sha256,
    exceptions,
    hashable,
    hw-prim,
    loop,
    mtl,
    primitive,
    template-haskell,
    transformers,
    vector,
    vector-split
  exposed-modules:
    Data.Spew
    Data.Spew.Codec
    Data.Spew.Encode
    Data.Spew.Hashed
    Data.Spew.Packet
    Galois.Field
    Galois.Matrix
  other-modules:
    Data.Spew.Util
  hs-source-dirs: src

executable spew
  import: base
  main-is: app/Main.hs
  build-depends:
    spew,
    optparse-applicative,
    iproute
